# ss-utils-logging

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/ss_utils_logging/: __init__.py  cli.py  common.py  formatters.py  logging_config.py
src/ss_utils_logging/example_config/: logging.prod.yaml  logging.yaml
tests/: conftest.py  test_logging_config.py
